--- a/about_MDHL.html
+++ b/about_MDHL.html
@@ -19,7 +19,8 @@
         <nav>
             <a href="./index.html">Home</a>
             <span>|</span>
-            <a href="#">About MDHL</a>
+            <!-- <a href="#">About MDHL</a> -->
+            <span>About MDHL</span>
             <span>|</span>
             <a href="./contact.html">contact</a>
         </nav>
