--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,8 @@
             <span>|</span>
             <a href="./about_MDHL.html">About MDHL</a>
             <span>|</span>
-            <a href="#">contact</a>
+            <!-- <a href="#">contact</a> -->
+            <span>contact</span>
         </nav>
     </header>
 
