--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         </figure>
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
-            <a href="#">Home</a>
+            <!-- <a href="">Home</a> -->
+            <span>Home</span>
             <span>|</span>
             <a href="./about_MDHL.html">About MDHL</a>
             <span>|</span>
