--- a/index.html
+++ b/index.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Home</title>
 </head>
+
 <body>
     <header>
-        <figure>
-            <img src="./assets/logo/Logo_Mighty_ducks-01.png" height="50px" alt="Logo">
-        </figure>
-        <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <!-- <a href="">Home</a> -->
-            <span>Home</span>
-            <span>|</span>
-            <a href="./about_MDHL.html">About MDHL</a>
-            <span>|</span>
-            <a href="./contact.html">contact</a>
-        </nav>
+        <div class="portada">
+            <h1>Mighty Ducks Hockey League</h1>
+        </div>
+        <div class="portada2">    
+            <h2 class="texto_portada">Upcoming Events</h2>
+            <img class="logo" src="./assets/logo/Logo_Mighty_ducks-01.png" alt="logo">
+        </div>
+
+        
     </header>
 
+<nav>
+            <!-- <a href="">Home</a> -->
+            <span>Home</span>
+            <a href="./about_MDHL.html">About MDHL</a>
+            <a href="./contact.html">contact</a>
+        </nav>
+
     <main>
-        <section>
+        <!-- <section>
             <figure>
-                <img src="./assets/imagenes/hockey 1.jpg" height="400px"  alt="Foto de un jugador de hockey">
+                <img src="./assets/imagenes/hockey 1.jpg" height="400px" alt="Foto de un jugador de hockey">
             </figure>
         </section>
 
-        <section>            
-            <h2>Upcoming Events</h2>            
+        <section>
+            <h2>Upcoming Events</h2>
             <article>
                 <h3>August 4</h3>
                 <p>MDSL Fundraiser</p>
@@ -45,7 +52,8 @@
                 <h3>September 1</h3>
                 <p>First Game of the Season (Check Game Schedule for details)</p>
             </article>
-        </section>
+        </section> -->
     </main>
 </body>
+
 </html>
