--- a/index.html
+++ b/index.html
@@ -14,45 +14,38 @@
         <div class="portada">
             <h1>Mighty Ducks Hockey League</h1>
         </div>
-        <div class="portada2">    
+        <div class="portada2">
             <h2 class="texto_portada">Upcoming Events</h2>
             <img class="logo" src="./assets/logo/Logo_Mighty_ducks-01.png" alt="logo">
         </div>
 
-        
+
     </header>
 
-<nav>
-            <!-- <a href="">Home</a> -->
-            <span>Home</span>
-            <a href="./about_MDHL.html">About MDHL</a>
-            <a href="./contact.html">contact</a>
-        </nav>
+    <nav>
+        <!-- <a href="">Home</a> -->
+        <span>Home</span>
+        <a href="./about_MDHL.html">About MDHL</a>
+        <a href="./contact.html">contact</a>
+    </nav>
 
     <main>
-        <!-- <section>
-            <figure>
-                <img src="./assets/imagenes/hockey 1.jpg" height="400px" alt="Foto de un jugador de hockey">
-            </figure>
-        </section>
-
         <section>
-            <h2>Upcoming Events</h2>
             <article>
                 <h3>August 4</h3>
-                <p>MDSL Fundraiser</p>
+                <p> &nbsp; MDSL Fundraiser</p>
             </article>
 
             <article>
                 <h3>August 16</h3>
-                <p>Season Kick-off: Meet the Teams</p>
+                <p> &nbsp;Season Kick-off: Meet the Teams</p>
             </article>
 
             <article>
                 <h3>September 1</h3>
-                <p>First Game of the Season (Check Game Schedule for details)</p>
+                <p> &nbsp;First Game of the Season (Check Game Schedule for details)</p>
             </article>
-        </section> -->
+        </section>
     </main>
 </body>
 
