--- a/about_MDHL.html
+++ b/about_MDHL.html
@@ -15,7 +15,7 @@
             <h1>Mighty Ducks Hockey League</h1>
         </div>
         <div class="portada2">
-            <h2 class="texto_portada">Upcoming Events</h2>
+            <h2 class="texto_portada">About MDHL</h2>
             <img class="logo" src="./assets/logo/Logo_Mighty_ducks-01.png" alt="logo">
         </div>
 
