--- a/about_MDHL.html
+++ b/about_MDHL.html
@@ -27,6 +27,8 @@
         <!-- <a href="./about_MDHL.html">About MDHL</a> -->
         <span>about_MDHL</span>
         <a href="./contact.html">contact</a>
+        <a href="./game_information.html">Game Information</a>
+        <a href="./rules.html">Rules</a>
     </nav>
 
 
