--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,8 @@
             <a href="./about_MDHL.html">About MDHL</a>
             <!-- <a href="./contact.html">contact</a> -->
             <span>contact</span>
+            <a href="./game_information.html">Game Information</a>
+        <a href="./rules.html">Rules</a>
         </nav>
 
     <main>
