--- a/game_information.html
+++ b/game_information.html
@@ -23,13 +23,13 @@
     </header>
 
     <nav>
+        <!-- <a href="">Home</a> -->
         <span>Home</span>
         <a href="./about_MDHL.html">About MDHL</a>
         <a href="./contact.html">contact</a>
-        <a href="./game_information.html">Game Information</a>
+        <span>Game Information</span>
         <a href="./rules.html">Rules</a>
     </nav>
-
     <main>
         <section>
             <article>
@@ -49,5 +49,3 @@
         </section>
     </main>
 </body>
-
-</html>
