task3 para entregar

--- a/game_information.html
+++ b/game_information.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
             <h1>Mighty Ducks Hockey League</h1>
         </div>
         <div class="portada2">
-            <h2 class="texto_portada">Upcoming Events</h2>
+            <h2 class="texto_portada">Game Information</h2>
             <img class="logo" src="./assets/logo/Logo_Mighty_ducks-01.png" alt="logo">
         </div>
 
@@ -31,21 +31,85 @@
         <a href="./rules.html">Rules</a>
     </nav>
     <main>
-        <section>
-            <article>
-                <h3>August 4</h3>
-                <p> &nbsp; MDSL Fundraiser</p>
-            </article>
+        <h2 class="reglas">Mighty Ducks Hockey League</h2>
+        <h4>Fall Schedule</h4>
+        <br>
+        <u> *All games take place on Saturday.</u>
+        <div class="tabla">
+            <table>
+                <thead>
+                    <tr>
+                        <th>SEPTEMBER</th>
+                        <th>Teams</th>
+                        <th>Location</th>
+                        <th>Times</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td rowspan="2">9/01</td>
+                        <td>U1 and U4</td>
+                        <td>AJ Katzenmaier</td>
+                        <td>9:30 a.m.</td>
+                    </tr>
+                    <tr>
+                        <td>U3 and U2</td>
+                        <td>Grenbay</td>
+                        <td>1:00 p.m.</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">9/08</td>
+                        <td>U5 and U6</td>
+                        <td>Howard A Yeager</td>
+                        <td>9:30 a.m.</td>
+                    </tr>
+                    <tr>
+                        
+                        <td>U6 and U1 </td>
+                        <td>Marjorie P Hart</td>
+                        <td>1:00 p.m.</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">9/15</td>
+                        <td>U2 and U4</td>
+                        <td>North</td>
+                        <td>9:30 a.m.</td>
+                    </tr>
+                    <tr>
+                        <td>U3 and U5</td>
+                        <td>AJ Katzenmaier</td>
+                        <td>1:00 p.m.</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">9/22</td>
+                        <td>U1 and U3</td>
+                        <td>South</td>
+                        <td>9:30 a.m.</td>
+                    </tr>
+                    <tr>
+                        <td>U2 and U6</td>
+                        <td>Howard A Yeager</td>
+                        <td>1:00 p.m.</td>
+                    </tr>
+                    <tr>
+                        <td>9/29</td>
+                        <td>U4 and U5</td>
+                        <td>Greenbay</td>
+                        <td>9:30 a.m.</td>
+                    </tr>
+                </tbody>
 
-            <article>
-                <h3>August 16</h3>
-                <p> &nbsp;Season Kick-off: Meet the Teams</p>
-            </article>
 
-            <article>
-                <h3>September 1</h3>
-                <p> &nbsp;First Game of the Season (Check Game Schedule for details)</p>
-            </article>
-        </section>
+            </table>
+        </div>
+
+    <p><strong >Facility Type: </strong>Outdoor </p>
+    <br>
+    <p><strong>Additional Information: </strong>If deemed necessary by MDHL games may be shortened 
+    or cancelled due to extreme weather conditions. </p>
+    <br>
+    <p><strong >Please direct all question to: </strong> Michael Randall, League Coordinator</p>
+    <br>
+    <p><strong>Phone: </span> (630) 690-8132 <strong>Email: </strong> michael.randall@chihockey.org</p>
     </main>
 </body>
