--- a/about_MDHL.html
+++ b/about_MDHL.html
@@ -29,6 +29,7 @@
         <a href="./contact.html">contact</a>
         <a href="./game_information.html">Game Information</a>
         <a href="./rules.html">Rules</a>
+        <a href="./registration_form.html">Registration</a>
     </nav>
 
 
