--- a/rules.html
+++ b/rules.html
@@ -28,6 +28,8 @@
         <a href="./contact.html">contact</a>
         <a href="./game_information.html">Game Information</a>
         <span>Rules</span>
+        <a href="./registration_form.html">Registration</a>
+
     </nav>
 
     <main>
