--- a/registration_form.html
+++ b/registration_form.html
@@ -93,7 +93,7 @@
                     Grade:
                 </label>
                 <label>
-                    <input type="radio" name="Grade" value="PS">
+                    <input type="radio"  name="Grade" value="PS">
                     Pre-School
                 </label>
                 <label>
@@ -239,20 +239,21 @@
                     By singning below, I herebyagree and authorizethe above. In additions, by singning below, lalso
                     acknowledg that I have read the cancellation policy and agree to its terms.
                 </p>
-                <div>
+                <fieldset>
                     <label>
                         Parent/GuardianSignature:
                         <input  class="input_txt" type="text" name="parents" maxlength="50">
                     </label>
-                </div>
-                <div>
+                </fieldset>
+                <fieldset>
                     <label>
                         Date:
                         <input  type="date" name="date">
                     </label>
-                </div>
+            </fieldset>
 
             </fieldset>
+            
             <button type="submit" value="enviar">enviar</button>
         </form>
 
