--- a/game_information.html
+++ b/game_information.html
@@ -47,6 +47,7 @@
                             <th>Teams</th>
                             <th>Location</th>
                             <th>Times</th>
+                            <th></th>
 
                         </tr>
                     </thead>
@@ -124,7 +125,7 @@
             <br>
             <p><strong>Please direct all question to: </strong> Michael Randall, League Coordinator</p>
             <br>
-            <p><strong>Phone: </span> (630) 690-8132 <strong>Email: </strong> michael.randall@chihockey.org</p>
+            <p><strong>Phone: </strong> (630) 690-8132 <strong>Email: </strong> michael.randall@chihockey.org</p>
         </section>
 
         <section>
@@ -175,7 +176,6 @@
                 <h3>South</h3>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d94709.87275078469!2d-88.12519508359375!3d42.1142483!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fbaf837d15555%3A0xa62e7c7fad17741f!2sDIAMOND%20HOCKEY!5e0!3m2!1ses-419!2sar!4v1676597938542!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </article>
-        </section>
         </section>
     </main>
 </body>
