--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assets/logo/icono.ico">
     <link rel="stylesheet" href="style.css">
     <title>Contact</title>
 </head>
@@ -35,14 +36,14 @@
 
     <main>
 
-    <section>
+        <div class="section">
         <p>
             Please email us at <a class="correo" href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>
         </p>
         <p>
             We reply to your email as soon as we can.
         </p>
-    </section>
+        </div>
     </main>
 </body>
 
