--- a/rules.html
+++ b/rules.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assets/logo/icono.ico">
     <link rel="stylesheet" href="style.css">
     <title>Rules</title>
 </head>
@@ -36,9 +37,10 @@
         <h2 class="reglas">Mighty Ducks Hockey League</h2>
         <h2 class="reglas">RULES OF PLAY & POLICIES</h2>
         <p class="reglas">IHF rules shall govern MDHL play except as modified herein.</p>
-        <section>
-            <h3>SPORTSMANSHIP</h3>
+        <div class="section">
             <article>
+                <h3>SPORTSMANSHIP</h3>
+
                 <p>&nbsp; The common interest that members of the Association share is to inspire
                     youth to practice the ideals of sportsmanship and fair play. Any player, coach,
                     team, parent, spectator, administrator or referee whose behavior detracts from
@@ -46,7 +48,7 @@
                     background, expertise, accomplishments or standing.
                 </p>
             </article>
-        </section>
+        </div>
         <section>
             <h3>IHF FIELD REGULATIONS</h3>
             <article>
@@ -77,9 +79,10 @@
                     dimensions and size of goal similarly modified.</p>
             </article>
         </section>
-        <section>
-            <h3>ALL-PLAY</h3>
+        <div class="section">
             <article>
+            <h3>ALL-PLAY</h3>
+            
                 <p>&nbsp; All-play means that every recreation player on every team shall play atleast
                     fifty percent of each game. Coaches in the competition program are encouraged
                     to play their players 50% of each game. </p>
@@ -88,7 +91,7 @@
                     and/or games, ungentlemanly conduct at practice and/or games, and
                     injuries.</p>
             </article>
-        </section>
+        </div>
     </main>
 
 </body>
