--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assets/logo/icono.ico">
     <link rel="stylesheet" href="style.css">
     <title>Home</title>
 </head>
@@ -33,7 +34,8 @@
     </nav>
 
     <main>
-        <section>
+            <img src="./assets/imagenes/hockey 1.jpg" alt="jugador ">
+        <div class="section">
             <article>
                 <h3>August 4</h3>
                 <p> &nbsp; MDSL Fundraiser</p>
@@ -48,7 +50,7 @@
                 <h3>September 1</h3>
                 <p> &nbsp;First Game of the Season (Check Game Schedule for details)</p>
             </article>
-        </section>
+        </div>
     </main>
 </body>
 
