--- a/about_MDHL.html
+++ b/about_MDHL.html
@@ -35,7 +35,7 @@
 
 
     <main>
-        <img src="./assets/imagenes/hockey 2.jpg" alt="jugador">
+        <img src="./assets/imagenes/hockey2.jpg" alt="jugador">
         <div class="section">
             <article>
                 <h3>Mision</h3>
