--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
     </nav>
 
     <main>
-
+<img src="./assets/imagenes/hockey3.jpg" alt="jugador3">
         <div class="section">
         <p>
             Please email us at <a class="correo" href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>
