--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </nav>
 
     <main>
-            <img src="./assets/imagenes/hockey 1.jpg" alt="jugador ">
+            <img src="./assets/imagenes/hockey1.jpg" alt="jugador ">
         <div class="section">
             <article>
                 <h3>August 4</h3>
